--- a/api/package.json
+++ b/api/package.json
@@ -12,19 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^20.6.2",
-    "@w-yama-can/judge-systems": "^3.8.7",
+    "@w-yama-can/judge-systems": "^3.8.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "html-react-parser": "^5.0.6",
+    "mathjax": "^3.2.2",
     "mysql2": "^3.6.1",
-    "next": "^13.4.20-canary.33"
+    "next": "^13.4.20-canary.33",
+    "react-jsx-parser": "^1.29.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.9",
-    "ts-loader": "^9.5.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "@types/mathjax": "^0.0.40",
+    "@types/node": "^20.6.2"
   }
 }
