--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"dependencies": {
 		"@types/cookie-parser": "^1.4.4",
 		"@w-yama-can/judge-systems": "^3.6.7",
-		"cookie-parser": "^1.4.6"
+		"cookie-parser": "^1.4.6",
+		"marked": "^9.1.5",
+		"node-latex": "^3.1.0"
 	}
 }
