--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "rm -r ./dist && tsc && npm run start",
     "build": "rm -r ./dist && tsc && cd ../front && npm run build",
     "start": "node dist",
     "restart": "npm run build && npm start"
@@ -12,7 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@w-yama-can/judge-systems": "^3.8.9",
+    "@sweetalert2/theme-borderless": "^5.0.15",
+    "@w-yama-can/judge-systems": "^4.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
