--- a/front/package.json
+++ b/front/package.json
@@ -25,6 +25,7 @@
 		"react-ace": "^10.1.0",
 		"react-dom": "18.2.0",
 		"react-katex": "^3.0.1",
+		"redis": "^4.6.12",
 		"sqlstring": "^2.3.3",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.2.2",
