--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@sweetalert2/theme-borderless": "^5.0.15",
 		"@w-yama-can/judge-systems": "^4.0.1",
+		"cookie-parser": "^1.4.6",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2",
 		"express-session": "^1.17.3",
@@ -24,6 +25,7 @@
 		"react-jsx-parser": "^1.29.0"
 	},
 	"devDependencies": {
+		"@types/cookie-parser": "^1.4.6",
 		"@types/express": "^4.17.17",
 		"@types/express-session": "^1.17.9",
 		"@types/mathjax": "^0.0.40",
